fix avatr wrap

--- a/src/components/RecipeTestimonials/RecipeTestimonials.module.css
+++ b/src/components/RecipeTestimonials/RecipeTestimonials.module.css
@@ -33,6 +33,7 @@
 
 .avatarWrapper {
   margin-right: 15px;
+  flex-shrink: 0;
 }
 
 .authorInfo {
